Fix CompileTester